# windows-agent

dev/: README.md  Windows-MCP-Design-v1.md  pyproject.toml
dev/docs/: ai-virtual-mouse-motion-scheduler-plan.md  phase1_closure_test_matrix.md  phase1_final_integration_checklist.md  phase1_runbook.md  phase2-development-design.md  stage1-development-plan.md
dev/scripts/: run_phase1_tests.py
dev/src/desktop_agent/: __init__.py
dev/src/desktop_agent_dev/: __init__.py  __main__.py  backend_windows_mcp.py  contracts.py  executor.py  manifest.py  mcp_server.py  motion.py  orchestrator.py  overlay.py  overlay_window.py  pathgen.py  perception.py  planner.py  safety.py  schemas.py  state.py  tool_registry.py  user_input_monitor.py
dev/src/desktop_agent_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dev/src/desktop_agent_dev/installer/: __init__.py  bootstrap.py  healthcheck.py  probe.py
dev/src/desktop_agent_dev/recovery/: __init__.py  (+5 more)
dev/tests/: test_backend_loader.py  test_executor.py  test_executor_debug_overlay.py  test_input_tool_docs.py  test_manifest_resources.py  test_mcp_server.py  test_motion_scheduler.py  test_motion_tools.py  test_overlay_tools.py  test_perception.py  test_phase1_contracts.py  test_phase1_runner.py  test_phase2_pathgen.py  test_phase2_service_bootstrap.py  test_phase3_state_machine.py  test_phase4_overlay.py  test_phase4_real_input_overlay.py  test_planner.py  test_recovery_store.py  test_registry_motion_integration.py  test_safety.py  test_smoke.py  test_tool_registry.py  test_vision_foundation.py
(+32 files in other folders)
