[project]
name = "desktop-agent-dev"
version = "0.1.0"
description = "Dev workspace for a Windows MCP desktop agent platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=3.0",
  "pillow>=11.0.0",
  "pytest>=9.0.3",
  "ruff>=0.15.11",
  "windows-mcp",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[project.scripts]
desktop-agent-dev = "desktop_agent_dev.__main__:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv.sources]
windows-mcp = { path = "../Windows-MCP-main" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

